--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -200,6 +200,7 @@ line-length = 120
 [tool.ruff.lint.per-file-ignores]
 "*.ipynb" = ["E501", "ANN001", "ANN201"]
 "examples/**/*.py" = ["E501"]
+"beeai_framework/agents/experimental/**/*.py" = ["E501"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
