feat(adapters): add Transformers ChatModel support (#1087)
Ref: #1012

Signed-off-by: Jungkoo Kang <jungkoo.kang@gmail.com>
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>
Co-authored-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/.env.example
+++ b/python/.env.example
@@ -83,6 +83,15 @@ BEEAI_LOG_LEVEL=INFO
 # AZURE_OPENAI_CHAT_MODEL=gpt-4o-mini
 # AZURE_OPENAI_API_HEADERS="secret-header=1234"
 
+
+########################
+### Transformers
+########################
+
+# HF_TOKEN="your-huggingface-api-key"
+# TRANSFORMERS_CHAT_MODEL="ibm-granite/granite-3.3-2b-instruct"
+
+
 # Evaluation (internal)
 EVAL_CACHE_DATASET=False
 EVAL_LOG_LLM_CALLS=False
