--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "embedme": "^1.22.1",
-    "mintlify": "^4.2.75"
+    "mintlify": "^4.2.173",
+    "typescript": "^5.9.3"
   }
 }
