chore: update maintainers
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -7,8 +7,7 @@ authors = [{ name = "IBM Corp." }]
 maintainers = [
     { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
     { name = "Tomas Dvorak", email = "toomas2d@gmail.com" },
-    { name = "Lukáš Janeček", email = "xjacka@gmail.com" },
-    { name = "Anton Puzanov", email = "antonp@il.ibm.com" }
+    { name = "Lukáš Janeček", email = "xjacka@gmail.com" }
 ]
 requires-python = ">=3.11,<4.0"
 
