docs: update examples to granite4 (#1240)
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/python/.env.example
+++ b/python/.env.example
@@ -96,4 +96,4 @@ BEEAI_LOG_LEVEL=INFO
 EVAL_CACHE_DATASET=False
 EVAL_LOG_LLM_CALLS=False
 EVAL_DISPLAY_MODE=all
-EVAL_CHAT_MODEL_NAME="ollama:granite3.3:8b"
+EVAL_CHAT_MODEL_NAME="ollama:granite4:micro"
