--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -44,7 +44,7 @@ uvicorn = {version = "^0.37.0", optional = true}
 types-grpcio = {version = "1.0.0.20250703", optional = true}
 types-grpcio-reflection = {version = "1.0.0.20250506", optional = true}
 wikipedia-api = {version = "^0.8.1", optional = true}
-beeai-sdk = {version = "0.3.7", optional = true}
+agentstack-sdk = {version = "0.4.0", optional = true}
 langgraph-prebuilt = {version = "^0.6.4", optional = true}
 deprecated = "^1.2.18"
 torch = [
@@ -93,7 +93,8 @@ llama_index = ["llama-index"]
 langchain = ["langchain-core", "langchain-community", "langchain-ollama"]
 rag = ["llama-index", "langchain-core", "langchain-community", "langchain-ollama", "markdown", "unstructured"]
 acp = ["acp-sdk", "uvicorn"]
-beeai-platform = ["beeai-sdk", "a2a-sdk", "uvicorn"]
+beeai-platform = ["agentstack-sdk", "a2a-sdk", "uvicorn"]
+agentstack = ["agentstack-sdk", "a2a-sdk", "uvicorn"]
 a2a = ["a2a-sdk", "uvicorn", "types-grpcio", "types-grpcio-reflection"]
 watsonx-orchestrate = ["uvicorn", "fastapi"]
 bedrock = ["boto3"]
@@ -112,7 +113,7 @@ all = [
     "a2a-sdk",
     "fastapi",
     "llama-index",
-    "beeai-sdk",
+    "agentstack-sdk",
     "langgraph-prebuilt",
     "torch",
     "peft",
