--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -22,7 +22,7 @@ a2a-sdk = {version = "^0.3.7", optional = true, extras = ["grpc", "http-server",
 acp-sdk = {version = "^1.0.3", optional = true}
 aiofiles = "^24.1.0"
 boto3 = {version = "^1.37.5", optional = true}
-cachetools = "^5.5.2"
+cachetools = ">=5.5.2"
 chevron = "^0.14.0"
 ddgs = { version="^9.6.0", optional = true }
 fastapi = {version = "^0.116.0", optional = true }
